

-Creada entidad PrecioProducto y relacionada con Producto, se actualizaron todas las dependencias de ambas entidades

*********************************************************************************************************************
Hasta 13 Febrero 2015
*********************************************************
-Nuevas soluciones a no conformidades de OrdenTrabajo, Producto, Compra
  -Solucionadas no conformidades final sin edit de Producto, Tercero, OrdenTrabajo, Compra
  -Solucionadas no conformidades final sin edit: Tercero debido al atributo Direccion

-Cambiada la administracion del Sistema para -SonataAdminBundle-
  -Arreglado routing de SonataBundle

-Actualizado el proceso de Movimiento de Almacenes e InformeStock

-Eliminados bundles no utilizados en el sistema
  -Eliminada herencia entre bundles nomenclador y admingenerator
  -Eliminadas configuraciones para admingenerator y liipimagine

-Solucionado problema de generado automático de consecutivo_compra

-Adicionada diseño para páginas de error

-Solucionados problemas de validación y proceso de entidades
  -Solucionado problema al adicionar Producto
  -Solucionado problema al editar Producto
  -Solucionado problema al editar SubGrupos de entidad Autobus


-Cambiado el formato Informe Stock
-Cambio de la entidad Compra y sus relaciones para el módulo de Bodega

-Solucionada no conformidad donde no debe aparecen el almacenOrigen al seleccionar el AlmacenDestino

-Creados los procesos para Pedido de Compra, Albarán, Movimiento de Productos e Informe Stock
  -Finalizada entidad y proceso de Pedido de Compra
  -Finalizadas operaciones con la entidad BitacoraAlmacen, Albaran y PedidoCompra
  -Completadas operaciones con entidades InformeStock, Albaran y MovimientoProductos
  -Entidad Lineas de Pedido de Compra ya permite modificar
  -Completada correctamente el proceso de PedidoCompra
  -Completada correctamente el proceso de PedidoCompra tenia problemas en el editar