@@ -1,0 +1,31 @@
+<?php
+
+namespace Buseta\BodegaBundle\Entity;
+
+use Buseta\NomencladorBundle\Entity\CategoriaProducto;
+use Doctrine\ORM\EntityRepository;
+
+/**
+ * CategoriaProductoRepository
+ *
+ * This class was generated by the Doctrine ORM. Add your own custom
+ * repository methods below.
+ */
+class CategoriaProductoRepository extends EntityRepository
+{
+    public function searchByValor($valores) {
+        $q = "SELECT r FROM BusetaBodegaBundle:CategoriaProducto r WHERE r.id = :valores";
+
+        $query = $this->_em->createQuery($q);
+        $query->setParameter('valores', $valores);
+
+        try {
+            return $query->getResult();
+        } catch (NoResultException $e) {
+            return false;
+        }
+    }
+
+    
+
+}
