@@ -52,6 +52,15 @@ class BusquedaProductoType extends AbstractType{
                     'class' => 'form-control',
                 )
             ))
+            ->add('categoriaProducto', 'entity', array(
+                'class' => 'BusetaBodegaBundle:CategoriaProducto',
+                'label' => 'Categoría de Producto',
+                'required' => false,
+                'empty_value' => '---Seleccione categoría de producto---',
+                'attr' => array(
+                    'class' => 'form-control',
+                )
+            ))
         ;
     }
 
